[gd_scene load_steps=13 format=3 uid="uid://f1jy7yowfayo"]

[ext_resource type="Theme" uid="uid://4xcdimhfc2hy" path="res://default_theme_tools.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://4ayk4syw8k14" path="res://graphics/predarkenedbg.png" id="2"]
[ext_resource type="Script" path="res://tools/PPDManager/PPDManager.gd" id="3"]
[ext_resource type="Script" path="res://tools/PPDManager/PPDDownloader.gd" id="4"]
[ext_resource type="Script" path="res://menus/BGWindow.gd" id="4_oui4o"]
[ext_resource type="Texture2D" uid="uid://dku88ebe3yjq0" path="res://graphics/icons/download.svg" id="5"]
[ext_resource type="PackedScene" uid="uid://b2wrelc1otv6p" path="res://tools/PPDManager/PPDManagerPopup.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://c8c1a67bhcxiv" path="res://graphics/icons/settings-box.svg" id="7"]
[ext_resource type="Script" path="res://tools/PPDManager/PPDImporter.gd" id="8"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03mkd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7v7p"]
bg_color = Color(1, 1, 1, 1)

[node name="PPDManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("3")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
mouse_filter = 2

[node name="ToolsPopup" type="Window" parent="CenterContainer"]
position = Vector2i(0, 32)
size = Vector2i(980, 375)
script = ExtResource("4_oui4o")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/ToolsPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ToolsPopup/MarginContainer"]
layout_mode = 2

[node name="PPDDownloaderButton" type="Button" parent="CenterContainer/ToolsPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PPD Downloader"
icon = ExtResource("5")

[node name="PPDManagerSongs" type="Button" parent="CenterContainer/ToolsPopup/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Manage PPD Songs"
icon = ExtResource("7")

[node name="PPDImporter" type="Button" parent="CenterContainer/ToolsPopup/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Import PPD Songs Directory"
icon = ExtResource("7")

[node name="PPDDownloader" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.05945
offset_top = -0.529724
offset_right = 1.05945
offset_bottom = -0.529785
mouse_filter = 2
theme = ExtResource("1")
script = ExtResource("4")

[node name="Panel" type="Window" parent="PPDDownloader"]
size = Vector2i(232, 100)
visible = false
transient = true
exclusive = true
script = ExtResource("4_oui4o")

[node name="MarginContainer" type="MarginContainer" parent="PPDDownloader/Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PPDDownloader/Panel/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PPDDownloader/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("1")
text = "WARNING: This is an experimental feature, it may be slow on some computers, performance will be improved in a future update."

[node name="HBoxContainer" type="HBoxContainer" parent="PPDDownloader/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PPDDownloader/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PPD download URL: "

[node name="URLLineEdit" type="LineEdit" parent="PPDDownloader/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="PPDDownloader/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Download and install..."

[node name="WaitDialog" type="Window" parent="PPDDownloader"]
position = Vector2i(0, 32)
size = Vector2i(218, 184)
visible = false
wrap_controls = true
transient = true
exclusive = true
script = ExtResource("4_oui4o")

[node name="MarginContainer" type="MarginContainer" parent="PPDDownloader/WaitDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PPDDownloader/WaitDialog/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PPDDownloader/WaitDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Downloading, please wait..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PPDDownloader/WaitDialog/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_03mkd")
theme_override_styles/fill = SubResource("StyleBoxFlat_d7v7p")
value = 28.32
show_percentage = false

[node name="YTDLErrorDialog" type="AcceptDialog" parent="PPDDownloader"]
unique_name_in_owner = true
position = Vector2i(0, 32)
size = Vector2i(516, 240)

[node name="MarginContainer" type="MarginContainer" parent="PPDDownloader/YTDLErrorDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PPDDownloader/YTDLErrorDialog/MarginContainer"]
layout_mode = 2

[node name="YTDLErrorLabel" type="Label" parent="PPDDownloader/YTDLErrorDialog/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="YTDLErrorTextEdit" type="TextEdit" parent="PPDDownloader/YTDLErrorDialog/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 150)
layout_mode = 2

[node name="PPDManagerPopup" parent="." instance=ExtResource("6")]
position = Vector2i(0, 32)
visible = false

[node name="ErrorDialog" type="AcceptDialog" parent="."]
position = Vector2i(0, 32)
size = Vector2i(240, 114)

[node name="PPDImporter" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("8")

[node name="Window" type="Window" parent="PPDImporter"]
position = Vector2i(0, 24)
size = Vector2i(780, 385)
visible = false
exclusive = true
script = ExtResource("4_oui4o")

[node name="MarginContainer" type="MarginContainer" parent="PPDImporter/Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PPDImporter/Window/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "This tool allows you to use your existing PPD installation into PH, the game will require a restart afterwards."

[node name="PPDFoldersCheckbox" type="CheckBox" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create folder with my PPD folder structure in the \"folders\" tab"

[node name="HidePPDEXtSongsCheckbox" type="CheckBox" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hide PPD importer songs from the PPD tab"

[node name="HBoxContainer" type="HBoxContainer" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PPDImporter/Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PPD Folder Name (Overwritten if it exists)"

[node name="LineEdit" type="LineEdit" parent="PPDImporter/Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PPD"

[node name="PPDOGGCheckbox" type="CheckBox" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Convert all song audio to OGG now (Uncheck if you have a lot of songs, takes ~2-4 s per song)"

[node name="Button" type="Button" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select PPD Songs Directory & Import"

[node name="Label2" type="Label" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Current installation path: %s"

[node name="RemoveInstallationButton" type="Button" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Remove install"

[node name="CloseButton" type="Button" parent="PPDImporter/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="PPDImporterFileDialog" type="FileDialog" parent="PPDImporter"]
mode = 2
title = "Open a Directory"
size = Vector2i(717, 175)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true

[node name="WaitDialog" type="Window" parent="PPDImporter"]
size = Vector2i(280, 100)
visible = false
wrap_controls = true
transient = true
exclusive = true
script = ExtResource("4_oui4o")

[node name="Label" type="Label" parent="PPDImporter/WaitDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Importing, please wait..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartAcceptDialog" type="AcceptDialog" parent="PPDImporter"]
position = Vector2i(0, 32)
size = Vector2i(343, 100)
dialog_text = "Import complete, please restart the game."

[node name="RemoveInstallationConfirmationDialog" type="ConfirmationDialog" parent="PPDImporter"]
size = Vector2i(200, 218)
dialog_text = "Do you want to remove your existing PPD install? This will remove the songs from the game but not from the hard drive."
dialog_autowrap = true

[connection signal="close_requested" from="CenterContainer/ToolsPopup" to="CenterContainer/ToolsPopup" method="hide"]
[connection signal="pressed" from="CenterContainer/ToolsPopup/MarginContainer/VBoxContainer/PPDDownloaderButton" to="PPDDownloader" method="show_panel"]
[connection signal="pressed" from="CenterContainer/ToolsPopup/MarginContainer/VBoxContainer/PPDManagerSongs" to="PPDManagerPopup" method="popup_centered"]
[connection signal="pressed" from="CenterContainer/ToolsPopup/MarginContainer/VBoxContainer/PPDImporter" to="PPDImporter" method="show_panel"]
[connection signal="close_requested" from="PPDDownloader/Panel" to="PPDDownloader/Panel" method="hide"]
[connection signal="close_requested" from="PPDDownloader/WaitDialog" to="PPDDownloader/WaitDialog" method="hide"]
[connection signal="close_requested" from="PPDImporter/Window" to="PPDImporter/Window" method="hide"]
[connection signal="toggled" from="PPDImporter/Window/MarginContainer/VBoxContainer/PPDFoldersCheckbox" to="PPDImporter/Window/MarginContainer/VBoxContainer/HBoxContainer/LineEdit" method="set_editable"]
[connection signal="toggled" from="PPDImporter/Window/MarginContainer/VBoxContainer/HidePPDEXtSongsCheckbox" to="PPDImporter/Window/MarginContainer/VBoxContainer/HBoxContainer/LineEdit" method="set_editable"]
[connection signal="pressed" from="PPDImporter/Window/MarginContainer/VBoxContainer/Button" to="PPDImporter/PPDImporterFileDialog" method="popup_centered_ratio" binds= [0.5]]
[connection signal="pressed" from="PPDImporter/Window/MarginContainer/VBoxContainer/RemoveInstallationButton" to="PPDImporter/RemoveInstallationConfirmationDialog" method="popup_centered"]
[connection signal="dir_selected" from="PPDImporter/PPDImporterFileDialog" to="PPDImporter" method="_on_PPDImporterFileDialog_dir_selected"]
[connection signal="close_requested" from="PPDImporter/WaitDialog" to="PPDImporter/WaitDialog" method="hide"]
[connection signal="confirmed" from="PPDImporter/RestartAcceptDialog" to="PPDImporter" method="_on_RestartAcceptDialog_confirmed"]
[connection signal="confirmed" from="PPDImporter/RemoveInstallationConfirmationDialog" to="PPDImporter" method="_on_RemoveInstallationConfirmationDialog_confirmed"]
